fix: avoid recomputing suppressed-entry filter and use getFirst()